SERVER-35758 Mongo shell prompt errors when running transactions after overriding 'db'